corrcted the api connection

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
   </main>
 
   <script>
-    const apiBase = "https://your-service-name.onrender.com/api/events"; // 🔗 replace with your deployed API URL
+    const apiBase = "/api/events"; // 🔗 replace with your deployed API URL
     const eventForm = document.getElementById("eventForm");
     const message = document.getElementById("message");
     const eventsList = document.getElementById("eventsList");
